Code poem + doc

--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -1,7 +1,7 @@
 @use 'aside';
 @use 'blockquotes/blockquote';
 @use 'callouts/callouts';
-@use 'code';
+@use 'code/code';
 @use 'embed-faded';
 @use 'embeds';
 @use 'headings';
