--- a/scss/editor/callouts/_callout-blank.scss
+++ b/scss/editor/callouts/_callout-blank.scss
@@ -1,11 +1,11 @@
 .callout[data-callout="blank"] {
     --callout-padding: 0;
     --callout-content-padding: 0;
+    --callout-border-width: 0;
 
     margin: 0;
 
     &, > .callout-content {
-        border: none;
         background: none;
     }
 
