--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -9,6 +9,7 @@
 @use 'callout-film-strip';
 @use 'callout-grid';
 @use 'callout-letter';
+@use 'callout-masonry';
 @use 'callout-paper-fold';
 @use 'callout-pinned';
 @use 'callout-poem';
