--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -57,3 +57,12 @@ img:hover {
         font-size: #{$font-size-5} !important;
     }
 }
+
+
+
+.col-tag {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+}
