--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -4,6 +4,7 @@
 @use 'callout-cards-deck';
 @use 'callout-clue';
 @use 'callout-comic';
+@use 'callout-conversation';
 @use 'callout-cutout';
 @use 'callout-email';
 @use 'callout-film-strip';
