CSS Class: minimalist

--- a/scss/editor/_editor.scss
+++ b/scss/editor/_editor.scss
@@ -2,8 +2,7 @@
 @use 'blockquotes/blockquote';
 @use 'callouts/callouts';
 @use 'code/code';
-@use 'embed-faded';
-@use 'embeds';
+@use 'embeds/embeds';
 @use 'headings';
 @use 'highlight';
 @use 'horizontal_rule';
