--- a/scss/cssclasses/_note-accent.scss
+++ b/scss/cssclasses/_note-accent.scss
@@ -82,8 +82,8 @@ body.theme-dark {
 }
 
 /* Recomputation at the note level */
-.markdown-source-view,
-.markdown-preview-view {
+.markdown-source-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6),
+.markdown-preview-view:is(.note-accent-1, .note-accent-2, .note-accent-3, .note-accent-4, .note-accent-5, .note-accent-6) {
     /* Recompute the --color-accent variables */
     --color-accent-hsl: var(--accent-h), var(--accent-s), var(--accent-l);
     --color-accent: hsl(var(--accent-h), var(--accent-s), var(--accent-l));
@@ -106,6 +106,8 @@ body.theme-dark {
     --link-external-color-hover: var(--text-accent-hover);
     --link-unresolved-color: var(--text-accent);
     --link-unresolved-decoration-color: hsla(var(--interactive-accent-hsl), 0.3);
+
+    /* List */
     --list-marker-color-collapsed: var(--text-accent);
 
     /* Blockquotes */
