--- a/scss/editor/_table.scss
+++ b/scss/editor/_table.scss
@@ -25,7 +25,7 @@
     border-inline-width: 0;
 }
 
-.kpr-plain-tables {
+.fas-plain-tables {
     --table-background: rgba(var(--mono-rgb-100), 0.03);
     --table-border-color: transparent;
     --table-column-alt-background: none;
