--- a/scss/editor/callouts/_callout-letter.scss
+++ b/scss/editor/callouts/_callout-letter.scss
@@ -54,7 +54,7 @@
         font-family: "Homemade Apple", cursive;
         box-shadow: 0 0 20px rgba(0, 0, 0, 0.5) inset, 0 0 7px rgba(0, 0, 0, 0.5) inset;
     }
-    :is(.kpr-bg-textures .callout-content) {
+    :is(.fas-bg-textures .callout-content) {
         background-image: var(--paper-texture);
     }
     
