--- a/scss/foundations/colors/_dynamic_palette.scss
+++ b/scss/foundations/colors/_dynamic_palette.scss
@@ -67,8 +67,8 @@ $keep: 87%;
 
 // Create the block for default theme (no mixing)
 @each $tone in ("light", "dark") {
-    .is-mobile.theme-#{$tone}.kpr-custom-#{$tone},
-    .theme-#{$tone}.kpr-custom-#{$tone} {
+    .is-mobile.theme-#{$tone}.fas-custom-#{$tone},
+    .theme-#{$tone}.fas-custom-#{$tone} {
         @if $tone == "light" {
             --custom-color-base-00: #ffffff;
             --custom-color-base-100: #222222;
@@ -102,8 +102,8 @@ $keep: 87%;
     }
 
     // Create the class CSS block
-    .is-mobile.theme-#{$tone}.kpr-#{$tone},
-    .theme-#{$tone}.kpr-#{$theme} {
+    .is-mobile.theme-#{$tone}.fas-#{$tone},
+    .theme-#{$tone}.fas-#{$theme} {
 
         // Set the base variables for the gradient
         --color-space: #{$space};
