--- a/scss/window/_fas-dynamic-tabs.scss
+++ b/scss/window/_fas-dynamic-tabs.scss
@@ -1,4 +1,4 @@
-.kpr-dynamic-tabs .mod-root .workspace-tabs:not(.mod-stacked) .workspace-leaf.mod-active {
+.fas-dynamic-tabs .mod-root .workspace-tabs:not(.mod-stacked) .workspace-leaf.mod-active {
     animation: open-tab 0.5s;
 }
 
