--- a/scss/window/_window.scss
+++ b/scss/window/_window.scss
@@ -1,6 +1,6 @@
-@use 'kpr-bg-textures';
-/*@use 'kpr-dynamic-tabs';*/
-@use 'kpr-opposite-bg';
+@use 'fas-bg-textures';
+/*@use 'fas-dynamic-tabs';*/
+@use 'fas-opposite-bg';
 
 @use 'ribbon';
 @use 'scrollbar';
