--- a/scss/editor/_fas-headings.scss
+++ b/scss/editor/_fas-headings.scss
@@ -1,10 +1,10 @@
-.kpr-headings-hue, .headings-hue        { --h1-color: var(--middle-color); }
-.kpr-headings-complement, .headings-complement { --h1-color: var(--middle-color-complement); }
-.kpr-headings-accent, .headings-accent     { --h1-color: var(--color-accent); }
+.fas-headings-hue, .headings-hue        { --h1-color: var(--middle-color); }
+.fas-headings-complement, .headings-complement { --h1-color: var(--middle-color-complement); }
+.fas-headings-accent, .headings-accent     { --h1-color: var(--color-accent); }
 
-.kpr-headings-hue, .headings-hue,
-.kpr-headings-complement, .headings-complement,
-.kpr-headings-accent, .headings-accent {
+.fas-headings-hue, .headings-hue,
+.fas-headings-complement, .headings-complement,
+.fas-headings-accent, .headings-accent {
     --h2-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 10%);
     --h3-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 20%);
     --h4-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 40%);
@@ -12,28 +12,28 @@
     --h6-color: color-mix(in srgb, var(--h1-color), var(--text-normal) 80%);
 }
 
-.kpr-headings-hue.kpr-h1-display,
-.kpr-headings-hue .h1-display,
-.kpr-h1-display .headings-hue,
+.fas-headings-hue.fas-h1-display,
+.fas-headings-hue .h1-display,
+.fas-h1-display .headings-hue,
 .h1-display.headings-hue {
     --h2-color: var(--middle-color);
 }
-.kpr-headings-complement.kpr-h1-display,
-.kpr-headings-complement .h1-display,
-.kpr-h1-display .headings-complement,
+.fas-headings-complement.fas-h1-display,
+.fas-headings-complement .h1-display,
+.fas-h1-display .headings-complement,
 .h1-display.headings-complement {
     --h2-color: var(--middle-color-complement);
 }
-.kpr-headings-accent.kpr-h1-display,
-.kpr-headings-accent .h1-display,
-.kpr-h1-display .headings-accent,
+.fas-headings-accent.fas-h1-display,
+.fas-headings-accent .h1-display,
+.fas-h1-display .headings-accent,
 .h1-display.headings-accent {
     --h2-color: var(--color-accent);
 }
 
-:is(.kpr-headings-hue, .kpr-headings-complement, .kpr-headings-accent).kpr-h1-display,
-:is(.kpr-headings-hue, .kpr-headings-complement, .kpr-headings-accent) .h1-display,
-.kpr-h1-display :is(.headings-hue, .headings-complement, .headings-accent),
+:is(.fas-headings-hue, .fas-headings-complement, .fas-headings-accent).fas-h1-display,
+:is(.fas-headings-hue, .fas-headings-complement, .fas-headings-accent) .h1-display,
+.fas-h1-display :is(.headings-hue, .headings-complement, .headings-accent),
 .h1-display:is(.headings-hue, .headings-complement, .headings-accent) {
     --h3-color: color-mix(in srgb, var(--h2-color), var(--text-normal) 20%);
     --h4-color: color-mix(in srgb, var(--h2-color), var(--text-normal) 40%);
@@ -50,7 +50,7 @@
 
 
 
-.kpr-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal)) h1,
+.fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal)) h1,
 .markdown-preview-view.h1-display h1 {
     --h1-line-height: 1.2em;
     --h1-size: 3em;
@@ -130,7 +130,7 @@
 }
 
 
-.kpr-h1-stroke .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-display)) h1,
+.fas-h1-stroke .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-display)) h1,
 .markdown-preview-view.h1-stroke h1 {
     --h1-weight: var(--font-extralight);
     --h1-size: 2em;
