--- a/scss/foundations/_fas-accessibility.scss
+++ b/scss/foundations/_fas-accessibility.scss
@@ -1,15 +1,15 @@
-.kpr-accessibility {
+.fas-accessibility {
     --font-typewriter: "TT2020Base", "Courier", monospace;
     --icon-opacity-inactive: 0.5;
 }
 
-.kpr-accessibility,
-.kpr-sans-serif {
+.fas-accessibility,
+.fas-sans-serif {
     --font-text-theme: "Noto";
 }
 
-.kpr-accessibility,
-.kpr-bigger-font {
+.fas-accessibility,
+.fas-bigger-font {
     --font-weight: var(--font-normal);
     --font-text-size: 18px !important;
     --font-ui-smaller: 14px;
@@ -18,13 +18,13 @@
     --font-ui-large: 22px;
 }
 
-:is(.kpr-accessibility, .kpr-bigger-font) .cm-s-obsidian span.cm-formatting-quote {
+:is(.fas-accessibility, .fas-bigger-font) .cm-s-obsidian span.cm-formatting-quote {
     font-weight: var(--font-normal);
 }
 
 
-body:not(.kpr-doodle-icons),
-body.kpr-accessibility {
+body:not(.fas-doodle-icons),
+body.fas-accessibility {
     --icon-failed: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-slash'%3E%3Cpath d='M18 6 6 18'/%3E%3Cpath d='M6 6 18 18'/%3E%3C/svg%3E");
     --icon-incomplete: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='lucide lucide-slash'%3E%3Cpath d='M18 6 6 18'/%3E%3C/svg%3E");
 
