--- a/scss/foundations/_foundations.scss
+++ b/scss/foundations/_foundations.scss
@@ -1,4 +1,4 @@
 @use 'colors/default_theme';
 @use 'colors/dynamic_palette';
 @use 'typography';
-@use 'kpr-accessibility';
+@use 'fas-accessibility';
