--- a/scss/_cssvariables.scss
+++ b/scss/_cssvariables.scss
@@ -111,6 +111,9 @@ body {
     --banner-slope-border-width: 5px;
     --banner-slope-border-color: var(--color-accent);
 
+    /* callouts */
+    --callout-polaroid-angle: 2deg;
+    --callout-polaroid-img-size: 200px;
 
     /* circle cutouts */
     --cutout-corner-radius: 13px;
