--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -14,6 +14,7 @@
 @use 'callout-paper-fold';
 @use 'callout-pinned';
 @use 'callout-poem';
+@use 'callout-polaroid';
 @use 'callout-profile';
 @use 'callout-screen';
 @use 'callout-timeline';
