--- a/scss/editor/_image.scss
+++ b/scss/editor/_image.scss
@@ -6,11 +6,13 @@
     
 .markdown-rendered .image-embed[alt~="float-right"] {
     float: right;
+    clear: right;
     margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
 }
 
 .markdown-rendered .image-embed[alt~="float-left"] {
     float: left;
+    clear: left;
     margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
 }
     
