--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -63,3 +63,16 @@
         justify-content: center;
     }
 }
+
+.callout[data-callout-metadata="float-right"] {
+    float: right;
+    clear: right;
+    margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
+}
+
+
+.callout[data-callout-metadata="float-left"] {
+    float: left;
+    clear: left;
+    margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
+}
